--- a/developer-journey-map/client/src/assets/styles/dashboard.css
+++ b/developer-journey-map/client/src/assets/styles/dashboard.css
@@ -10,11 +10,9 @@
 }
 
 .map {
-    width: 100px;
-    height: 100px;
     background-color: var(--rev-dark-green);
     color: var(--rev-white);
     text-align: center;
-    line-height: 100px;
     border-radius: 10px;
+    padding: 10px;
 }
