changed login page design

--- a/developer-journey-map/client/src/app.css
+++ b/developer-journey-map/client/src/app.css
@@ -1,3 +1,8 @@
+body {
+    font-family: "Avenir Next Condensed re", sans-serif;
+    font-weight: 400;
+}
+
 .navbar {
     height: 50px;
     background-color: #91C859;
