--- a/developer-journey-map/client/src/login.css
+++ b/developer-journey-map/client/src/login.css
@@ -1,23 +1,19 @@
 .login {
-    height: calc(100vh - 100px);
+    /* height: calc(100vh - 100px); */
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #cfe7b6;
 }
 
 .wrapper {
-    width: 75%;
-    height: 75%;
+    width: 80%;
+    height: 80%;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     border-radius: 20px;
     display: flex;
     align-items: center;
-}
-
-.loginTitle {
-    margin-bottom: 40px;
-    color: #91C859;
-    font-size: large;
 }
 
 .left {
@@ -26,15 +22,49 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     background-color: #91C859;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
 }
 
 .left img {
-    width: 70%;
-    height: 70%;
+    width: 65%;
+    height: 65%;
+}
+
+.left a {
+    margin-bottom: 40px;
+    font-size: 2px;
+    color: #63883D;
+}
+
+.intro {
+    width: 50%;
+    margin-right: 30%;
+    margin-bottom: 40px;
+}
+
+.intro h1 {
+    color: #2E352F;
+    font-size: 10px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.intro p {
+    font-size: 5px;
+    color: #63883D;
+    margin-bottom: 5px;
+}
+
+.intro button {
+    font-size: 5px;
+    padding: 5px 5px;
+    border-radius: 5px;
+    border-color: #2E352F;
+    background-color: #63883D;
+    color: white;
 }
 
 .right {
@@ -44,11 +74,57 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: white;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
+.companyLogo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.logoName {
+    color: #2E352F;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.logoImg {
+    width: 30%;
+    height: 30%;
+    margin-bottom: 20px;
+}
+
+.loginTitle {
+    margin-bottom: 40px;
+    color: #91C859;
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.loginSubtitle {
+    color: #2E352F;
+    font-weight: bold;
+    font-size: 10px;
+    width: 45%; 
+    text-align: center; 
+    border-bottom: 1px solid #2E352F; 
+    line-height: 0.1em;
+    margin: 10px 0 20px;
+    margin-bottom: 50px;
+}
+ 
+.loginSubtitle span { 
+     background:#fff; 
+     padding:0 10px; 
+ }
+
 .loginButton {
-    width: 250px;
-    padding: 15px 15px;
+    width: 240px;
+    padding: 10px 15px;
     border-radius: 5px;
     color: white;
     display: flex;
@@ -72,7 +148,7 @@
 .icon {
     width: 20px;
     height: 20px;
-    margin-right: 10px;
+    margin-right: 20px;
     background-color: white;
     border-radius: 50%;
 }
