--- a/developer-journey-map/client/src/assets/styles/map.css
+++ b/developer-journey-map/client/src/assets/styles/map.css
@@ -67,16 +67,19 @@
     bottom: 0px;
     border-radius: 5px;
     box-shadow: 1px 1px 2px lightgray;
+    z-index: 4;
 }
 
 .touchpoint {
-    width: fit-content;
+    width: 100%;
     padding: 5px;
     margin-bottom: 10px;
     border: 1.5px solid black;
     border-radius: 10px;
     font-size: small;
     user-select: none;
+    position: relative;
+    z-index: 4;
 }
 
 .touchpoint-on-dragging {
@@ -88,4 +91,17 @@
     font-size: small;
     user-select: none;
     opacity: 50%;
+}
+
+.hehehe {
+    position: relative;
+    z-index: 4;
+}
+
+.touchpoint-node {
+    position: relative;
+    height: 10px;
+    width: 124.11458587646484px;
+    border: none;
+    background: transparent;
 }
