performance improvement - no longer delay issues when dragging

--- a/developer-journey-map/client/src/assets/styles/map.css
+++ b/developer-journey-map/client/src/assets/styles/map.css
@@ -101,7 +101,8 @@
 .touchpoint-node {
     position: relative;
     height: 10px;
-    width: 124.11458587646484px;
+    width: 123px;
+    /* width: 192.4px; */
     border: none;
     background: transparent;
 }
