change cursor shape to default - not working, to be fixed later

--- a/developer-journey-map/client/src/assets/styles/map.css
+++ b/developer-journey-map/client/src/assets/styles/map.css
@@ -102,6 +102,10 @@
     background: transparent;
 }
 
+.react-flow__pane {
+    cursor: default;
+}
+
 /* .react-flow .react-flow__handle {
     width: 10px;
     height: 10px;
