--- a/developer-journey-map/client/src/assets/styles/map.css
+++ b/developer-journey-map/client/src/assets/styles/map.css
@@ -71,7 +71,7 @@
     box-shadow: 1px 1px 2px lightgray;
 }
 
-.touchpoint {
+/* .touchpoint {
     width: 100%;
     padding: 5px;
     margin-bottom: 10px;
@@ -91,7 +91,7 @@
     font-size: small;
     user-select: none;
     opacity: 50%;
-}
+} */
 
 .touchpoint-node {
     position: relative;
