--- a/developer-journey-map/client/src/assets/styles/map.css
+++ b/developer-journey-map/client/src/assets/styles/map.css
@@ -80,9 +80,9 @@
     font-size: small;
     user-select: none;
     position: relative;
-}
+} */
 
-.touchpoint-on-dragging {
+/* .touchpoint-on-dragging {
     width: fit-content;
     padding: 5px;
     margin-bottom: 10px;
@@ -102,12 +102,13 @@
 }
 
 .react-flow__renderer {
-    z-index: 0 !important;
+    z-index: 1 !important;
     cursor: default;
 }
 
 .react-flow .react-flow__handle {
-    z-index: 5 !important;
+    z-index: 155 !important;
+    background-color: black;
     width: 8px;
-    height: 9px;
+    height: 8px;
 }
