--- a/developer-journey-map/client/src/assets/styles/map.css
+++ b/developer-journey-map/client/src/assets/styles/map.css
@@ -69,29 +69,8 @@
     bottom: 0px;
     border-radius: 5px;
     box-shadow: 1px 1px 2px lightgray;
+    z-index: 10;
 }
-
-/* .touchpoint {
-    width: 100%;
-    padding: 5px;
-    margin-bottom: 10px;
-    border: 1.5px solid black;
-    border-radius: 5px;
-    font-size: small;
-    user-select: none;
-    position: relative;
-} */
-
-/* .touchpoint-on-dragging {
-    width: fit-content;
-    padding: 5px;
-    margin-bottom: 10px;
-    border: 1.5px solid black;
-    border-radius: 5px;
-    font-size: small;
-    user-select: none;
-    opacity: 50%;
-} */
 
 .touchpoint-node {
     position: relative;
