--- a/developer-journey-map/client/src/assets/styles/map.css
+++ b/developer-journey-map/client/src/assets/styles/map.css
@@ -1,5 +1,37 @@
 @import url("./color-palette.css");
 
+.content {
+    position: relative;
+}
+
+.export {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+}
+
+.exportIcon {
+    width: 12px;
+    height: 12px;
+    margin-right: 2px;
+    margin-bottom: 2px;
+}
+
+.exportButton {
+    float: right;
+    margin-right: 20px;
+    margin-top: 20px;
+    padding: 3px 8px;
+    border-radius: 5px;
+    background-color: #2E352F;
+    color: white;
+    font-size: small;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
 .title {
     font-size: x-large;
     margin-bottom: 10px;
@@ -35,7 +67,24 @@
     background-color: var(--rev-black);
     color: var(--rev-white);
     text-align: center;
-    padding: 5px;
+    padding: 10px 10px;
+    border-radius: 5px 2px 2px 5px;
+    margin-right: 30px;
+    position: relative;
+    background-color: #2E352F;
+}
+
+.heading-top::after {
+    content: "";
+    width: 30px;
+    height: 30px;
+    -moz-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    position: absolute;
+    top: 7px;
+    right: -15px;
+    background-color: #2E352F;
+    z-index: 1;
 }
 
 .grid-cell {
