--- a/developer-journey-map/client/src/assets/styles/map.css
+++ b/developer-journey-map/client/src/assets/styles/map.css
@@ -140,3 +140,13 @@
     width: 8px;
     height: 8px;
 }
+
+.react-flow__edge-path-selector {
+    fill: none;
+    stroke: transparent;
+    stroke-width: 28;
+}
+
+.react-flow__edge-path-selector:hover {
+    cursor: pointer
+}
