--- a/developer-journey-map/client/src/assets/styles/app.css
+++ b/developer-journey-map/client/src/assets/styles/app.css
@@ -10,7 +10,7 @@ body {
 
 .navbar {
     height: 50px;
-    background-color: #91C859;
+    background-color: var(--rev-dark-green);
     color: white;
     display: flex;
     align-items: center;
@@ -45,7 +45,7 @@ body {
 
 .footer {
     height: 50px;
-    background-color: #91C859;
+    background-color: var(--rev-dark-green);
     color: white;
     display: flex;
     align-items: center;
