--- a/developer-journey-map/client/src/assets/styles/dashboard.css
+++ b/developer-journey-map/client/src/assets/styles/dashboard.css
@@ -5,23 +5,75 @@
     margin-bottom: 10px;
 }
 
+.dashboard {
+    width: 80vw;
+    margin: 0 auto;
+}
+
+.create-row {
+    display: flex;
+    justify-content: center;
+    margin: 5px 0;
+    padding: 10px 20px;
+    font-size: x-large;
+}
+
+.create-button:hover {
+    color: aquamarine;
+
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    margin: 5px 0;
+    padding: 10px 20px;
+    border-bottom: 2px solid var(--rev-white);
+}
+
+.grid-container:hover {
+    background-color: var(--rev-white);
+}
+
+.label {
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    margin: 5px 0;
+    padding: 10px 20px;
+    background-color: var(--rev-white);
+    font-weight: bold;
+    height: 40px;
+}
+
+.map-icon {
+    font-size: x-large;
+    color: var(--rev-dark-green);
+}
+
+.more-icon-cover {
+    position: relative;
+    border-radius: 50%;
+    padding: 3px;
+    z-index: 50;
+}
+
+.more-icon-cover:hover {
+    background-color: lightgrey;
+}
+
+.more {
+    font-size: x-large;
+    display: flex;
+    justify-content: end;
+}
+
 #dashboard-flex-layout {
     display: flex;
     gap: 15px;
-}
-
-.map-item {
-    color: var(--rev-black);
-    text-align: center;
-    border: 1px solid var(--rev-black);
-    border-radius: 10px;
-    padding: 10px;
-    display: flex;
-    z-index: 1;
-}
-
-.map-item:hover {
-    border: 2px solid var(--rev-dark-green);
 }
 
 .flex-buttons {
