--- a/developer-journey-map/client/src/assets/styles/map.css
+++ b/developer-journey-map/client/src/assets/styles/map.css
@@ -48,7 +48,8 @@
 }
 
 .question-cell {
-    padding-bottom: 50px !important;
+    padding-bottom: 40px !important;
+    /* min-height: 200px; */
 }
 
 .question-add-button {
@@ -61,6 +62,10 @@
     border-radius: 5px;
     box-shadow: 1px 1px 2px lightgray;
     z-index: 10;
+}
+
+.question-add-button:hover {
+    background-color: var(--rev-white);
 }
 
 .question-item {
@@ -87,7 +92,7 @@
 .editable-question {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
     align-items: center;
 }
 
@@ -95,13 +100,13 @@
     width: 80%;
 }
 
-.trash {
+.delete-button {
     color: var(--rev-black);
     font-size: x-large;
-    padding-right: 3px;
+    padding-left: 5px;
 }
 
-.trash:hover {
+.delete-button:hover {
     color: var(--rev-black);
     opacity: 70%;
 }
@@ -173,18 +178,27 @@
 }
 
 .droppable-cell {
-    padding-bottom: 50px;
+    padding-bottom: 40px;
+    min-height: 250px;
 }
 
 .droppable-field {
-    min-height: 150px;
+    /* min-height: 150px; */
+    width: 100%;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
 }
 
 .droppable-field-on-dragging {
-    min-height: 150px;
+    /* min-height: 150px; */
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
     opacity: 50%;
+    background-color: var(--rev-white);
 }
 
 .add-button {
@@ -197,6 +211,10 @@
     border-radius: 5px;
     box-shadow: 1px 1px 2px lightgray;
     z-index: 10;
+}
+
+.add-button:hover {
+    background-color: var(--rev-white);
 }
 
 .touchpoint-node {
