--- a/developer-journey-map/client/src/assets/styles/app.css
+++ b/developer-journey-map/client/src/assets/styles/app.css
@@ -17,10 +17,25 @@ body {
     justify-content: space-around;
 }
 
+.navbar-left {
+    display: flex;
+    margin-right: 15%;
+    
+}
+
+.navbar-right {
+    margin-left: 15%;
+}
+
 .logo {
     font-size: 20px;
     font-weight: bold;
-    margin-right: 40%;
+    margin-right: 10px;
+}
+
+.logoImage {
+    width: 30px;
+    height: 30px;
 }
 
 .list {
