--- a/developer-journey-map/client/src/assets/styles/map.css
+++ b/developer-journey-map/client/src/assets/styles/map.css
@@ -32,6 +32,10 @@
     cursor: pointer;
 }
 
+.exportButton:hover {
+    background-color: var(--rev-green);
+}
+
 .title {
     font-size: x-large;
     margin-bottom: 10px;
