--- a/developer-journey-map/client/src/assets/styles/map.css
+++ b/developer-journey-map/client/src/assets/styles/map.css
@@ -92,7 +92,7 @@
 .editable-question {
     width: 100%;
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -102,7 +102,7 @@
 
 .delete-button {
     color: var(--rev-black);
-    font-size: x-large;
+    font-size: 23px;
     padding-left: 5px;
 }
 
