--- a/developer-journey-map/client/src/assets/styles/dashboard.css
+++ b/developer-journey-map/client/src/assets/styles/dashboard.css
@@ -49,7 +49,7 @@
 .create-template {
     padding: 5px;
     background-color: var(--rev-white);
-    border: 2px solid var(--rev-white);
+    border: 2px solid lightgray;
     border-radius: 10px;
     text-align: center;
 }
