--- a/developer-journey-map/client/src/assets/styles/dashboard.css
+++ b/developer-journey-map/client/src/assets/styles/dashboard.css
@@ -135,3 +135,10 @@
 .button:hover {
     background-color: var(--rev-dark-green);
 }
+
+.empty-list {
+    color: var(--rev-black);
+    font-weight: bold;
+    text-align: center;
+    padding: 20px 0;
+}
